--- a/assets/index.html
+++ b/assets/index.html
@@ -9,15 +9,199 @@
     <title>Raiko</title>
 </head>
 <body>
+
     <header>
         <div class="container">
             <div class="logo">
-                <a href=""><img src="images/Raiko.png" alt="Raiko"></a>
+                <a href="https://github.com/ThiagoYamaguchi/Raiko"><img src="images/raiko.png" alt="Raiko"></a>
             </div>
             <div class="menu">
-..
+                <nav>
+                    <ul>
+                        <li class="active"><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </header>
+
+    <section id="banner">
+        <div class="container column">
+            <div class="banner_headline">
+                <h1>Top notch experience</h1>
+                <h2>Raiko is a responsive template perfect for all screen sizes</h2>
+            </div>
+            <div class="banner_options">
+                <div class="banner1">
+                    <div class="banner-title">Emergency Case</div>
+                    <div class="banner-description">If you need a doctor urgently outside of Raiko opening hours, call emergency appointment number for emergency service.</div>
+                    <a href="">Read more &#8594</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner-title">Doctors Timetable</div>
+                    <div class="banner-description">here at Raiko we have individual chef lists. Click read more below to see services and current timetable for our doctors.</div>
+                    <a href="">Read more &#8594</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner-title">Opening Hours</div>
+                    <div class="open-time">
+                        <div>Monday-Friday</div>
+                        <div>8:00 - 17:00</div>
+                    </div>
+                    <div class="open-time">
+                        <div>Saturday</div>
+                        <div>9:30 - 17:30</div>
+                    </div>
+                    <div class="open-time">
+                        <div>Sunday</div>
+                        <div>9:30 - 15:00</div>
+                    </div>
+                </div>
+            </divc>
+        </div>
+    </section>
+
+    <section id="geral">
+        <div class="container">
+            <section>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Latest News</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body flex">
+                        <article>
+                            <a href="">
+                                <div class="news_data">
+                                    <div class="news_posted_at">06 Jul 22</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="images/tokyo.jpg" alt="Tokyo">
+                                </div>
+                                <div class="news_title">
+                                    Lorem ipsum dolor sit amat velum
+                                </div>
+                                <div class="news_resume">
+                                    Voluptatibus similique odit provident corporis quisquam recusandae nam. Excepturi temporibus quibusdam placeat quis, mollitia veniam nisi, impedit voluptatem quam, exercitationem itaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex delectus, sit aperiam, placeat dolore consequuntur itaque officiis alias laborum id magni!
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <div class="news_data">
+                                    <div class="news_posted_at">06 Jul 22</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="images/tokyo.jpg" alt="Tokyo">
+                                </div>
+                                <div class="news_title">
+                                    Lorem ipsum dolor sit amat velum
+                                </div>
+                                <div class="news_resume">
+                                    Voluptatibus similique odit provident corporis quisquam recusandae nam. Excepturi temporibus quibusdam placeat quis, mollitia veniam nisi, impedit voluptatem quam, exercitationem itaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex delectus, sit aperiam, placeat dolore consequuntur itaque officiis alias laborum id magni!
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <div class="news_data">
+                                    <div class="news_posted_at">06 Jul 22</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="images/tokyo.jpg" alt="Tokyo">
+                                </div>
+                                <div class="news_title">
+                                    Lorem ipsum dolor sit amat velum
+                                </div>
+                                <div class="news_resume">
+                                    Voluptatibus similique odit provident corporis quisquam recusandae nam. Excepturi temporibus quibusdam placeat quis, mollitia veniam nisi, impedit voluptatem quam, exercitationem itaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex delectus, sit aperiam, placeat dolore consequuntur itaque officiis alias laborum id magni!
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="">
+                                <div class="news_data">
+                                    <div class="news_posted_at">06 Jul 22</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="images/tokyo.jpg" alt="Tokyo">
+                                </div>
+                                <div class="news_title">
+                                    Lorem ipsum dolor sit amat velum
+                                </div>
+                                <div class="news_resume">
+                                    Voluptatibus similique odit provident corporis quisquam recusandae nam. Excepturi temporibus quibusdam placeat quis, mollitia veniam nisi, impedit voluptatem quam, exercitationem itaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex delectus, sit aperiam, placeat dolore consequuntur itaque officiis alias laborum id magni!
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <aside>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Departaments</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body_square">
+                        <div class="widget_square">
+                            <a href=""><h4>Assistência</h4></a>
+                        </div>
+                        <div class="widget_square">
+                            <a href=""><h4>Consultas</h4></a>
+                        </div>
+                        <a href="">
+                            <div class="widget_square">
+                                <h4>Sugestões</h4>
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="widget_square">
+                                <h4>Informações</h4>
+                            </div>
+                        </a>
+                        <div class="widget_square">
+                            <a href=""><h4>Departamentos</h4></a>
+                        </div>
+                        <div class="widget_square">
+                            <a href=""><h4>Plataformas</h4></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Make An Appointment</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        <div class="widget_appointment">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </div>
+                        <div class="widget_separation_bar"></div>
+                        <div class="contact">
+                            <img class="contact_img" src="images/phone.png" alt="phone">By Phone:<strong>(19) 9999-9999</strong> 
+                        </div>
+                        <div class="widget_separation_bar"></div>
+                        <div class="contact">
+                            <img class="contact_img" src="images/email.png" alt="email">By e-mail:<strong>raiko@email.com </strong> 
+                        </div>
+                        <div class="widget_separation_bar"></div>
+                        <div class="contact">
+                            <img class="contact_img" src="images/relatorio.png" alt="relatorio">or<strong>fill on the form </strong>on our contact page 
+                        </div>
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </section>
 </body>
 </html>
