Alteração no index.html

--- a/assets/index.html
+++ b/assets/index.html
@@ -159,16 +159,12 @@
                         <div class="widget_square">
                             <a href=""><h4>Consultas</h4></a>
                         </div>
-                        <a href="">
-                            <div class="widget_square">
-                                <h4>Sugestões</h4>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="widget_square">
-                                <h4>Informações</h4>
-                            </div>
-                        </a>
+                        <div class="widget_square">
+                            <a href=""><h4>Sugestões</h4></a>
+                        </div>
+                        <div class="widget_square">
+                            <a href=""><h4>Informações</h4></a>
+                        </div>
                         <div class="widget_square">
                             <a href=""><h4>Departamentos</h4></a>
                         </div>
