--- a/index.html
+++ b/index.html
@@ -170,24 +170,24 @@
                         <div class="widget_title_bar"></div>
                     </div>
                     <div class="widget_body_square">
-                        <div class="widget_square">
-                            <a href=""><h4>Assistência</h4></a>
-                        </div>
-                        <div class="widget_square">
-                            <a href=""><h4>Consultas</h4></a>
-                        </div>
-                        <div class="widget_square">
-                            <a href=""><h4>Sugestões</h4></a>
-                        </div>
-                        <div class="widget_square">
-                            <a href=""><h4>Informações</h4></a>
-                        </div>
-                        <div class="widget_square">
-                            <a href=""><h4>Departamentos</h4></a>
-                        </div>
-                        <div class="widget_square">
-                            <a href=""><h4>Plataformas</h4></a>
-                        </div>
+                        <a href=""><div class="widget_square">
+                            Assistência
+                        </div></a>
+                        <a href=""><div class="widget_square">
+                            Consultas
+                        </div></a>
+                        <a href=""><div class="widget_square">
+                            Sugestões
+                        </div></a>
+                        <a href=""><div class="widget_square">
+                            Informações
+                        </div></a>
+                        <a href=""><div class="widget_square">
+                            Departamentos
+                        </div></a>
+                        <a href=""><div class="widget_square">
+                            Plataformas
+                        </div></a>
                     </div>
                 </div>
                 <div class="widget">
